Bug 410746 - The plasma-phonebook app crashes when contactChanged signal is emitted in kpeople-sink plugin
Summary: The plasma-phonebook app crashes when contactChanged signal is emitted in kpe...
Status: RESOLVED FIXED
Alias: None
Product: kpeople
Classification: Frameworks and Libraries
Component: PersonsModel (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-09 00:15 UTC by Rituka Patwal
Modified: 2019-11-09 06:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rituka Patwal 2019-08-09 00:15:59 UTC
SUMMARY


STEPS TO REPRODUCE
1. Install kpeople-sink(https://invent.kde.org/rpatwal/kpeople-sink) plugin
2. Sync contacts via any sink using application [for example, https://invent.kde.org/rpatwal/sink-use-examples/tree/master/sink-carddav-example]
3. Run plasma-phonebook app
4. Make changes in a contact on server
5. Sync the contacts via that sink using application, again

OBSERVED RESULT
Plasma-phonebook app crashes

EXPECTED RESULT
Changes in contact(s) is/are reflected on plasma-phonebook application

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Simon Redman 2019-08-09 00:22:18 UTC
Possibly unrelated, but you can get the same behavior using kpeoplevcard -- Change a vcard and the app using kpeople crashes
(I should have reported this awhile ago but I forgot >.>)
Comment 2 Rituka Patwal 2019-08-11 11:10:03 UTC
Plasma-phonebook app also crashes when the contactRemoved signal is emitted from kpeople-sink.
Backtrace logs: https://invent.kde.org/snippets/377
Comment 3 Aleix Pol 2019-09-08 16:47:38 UTC
Git commit 3292b028d702ee44c7396ecf17d8f3e33e562abf by Aleix Pol.
Committed on 08/09/2019 at 16:47.
Pushed by apol into branch 'master'.

Fix crash when monitoring a contact that gets removed on PersonData

M  +35   -30   autotests/fakecontactsource.cpp
M  +6    -0    autotests/fakecontactsource.h
M  +13   -0    autotests/persondatatests.cpp
M  +1    -0    autotests/persondatatests.h
M  +3    -1    src/persondata.cpp

https://commits.kde.org/kpeople/3292b028d702ee44c7396ecf17d8f3e33e562abf
Comment 4 Aleix Pol 2019-09-08 16:47:56 UTC
Simon, your crash may be something different, please report separately.
I've fixed a couple of issues in KPeopleVCard today though.
Comment 5 Simon Redman 2019-11-09 06:23:34 UTC
(In reply to Aleix Pol from comment #4)
> Simon, your crash may be something different, please report separately.
> I've fixed a couple of issues in KPeopleVCard today though.

I finally was able to test this. The issue I was experiencing is resolved. Whether it was this fix or something else doesn't bother me :)