Fix crash when monitoring a contact that gets removed on PersonData

BUG: 410746